DevOps/Docker_Projects/simple-webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enterprise-webapp
  template:
    metadata:
      labels:
        app: enterprise-webapp
    spec:
      containers:
      - name: enterprise-webapp
        image: enterprise-webapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
