DevOps/Docker_Projects/simple-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-webapp-service
spec:
  type: NodePort
  selector:
    app: enterprise-webapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
