DevOps/Docker_Projects/simple-webapp/block-root-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-run-as-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: require-run-as-non-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Running containers as root is not allowed."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
